<resources>
	<string name="app_name">Vietincome</string>
	<string name="ok">Ok</string>
	<string name="press_one_more_to_exit">Press one more to exit</string>
	<string name="message_title">Message</string>
	<string name="news">News</string>
	<string name="event">Events</string>
	<string name="home">Home</string>
	<string name="portfolio">Portfolio</string>
	<string name="setting">Settings</string>
	<string name="profile">Profile</string>
	<string name="all_coin">All Coins</string>
	<string name="failed">Failed</string>
	<string name="added_favourite">%s added to favorite</string>
	<string name="remove_favorite">removed %s from favorite</string>
	<string name="bitcoin">฿</string>
	<string name="no_alert">You have no %s alert yet</string>
	<string name="we_aim_">We aim to create the best cryptocurrency app. We will be happy to get positive feedback on Google play. Please select rating.\nThanks for your support!</string>
	<string name="help_us">Help us make app better! If you still have a question, Feel free to message us</string>
	<string name="credit_content">We are using CoinMarketCap API for the top coins list. Also we awesome CryptoCompare API service to get charts data and other features. We appreciate both of them.</string>
	<string name="portfolio_intro">Add coin transactions here to track profit/loss and portfolio distributions. See an example of a standard portfolio below.</string>
	<string name="version">Vietincome for Android v1.0.7</string>
	<string name="favicoin_vietincome">Favicoin Vietincome</string>
	<string name="don_t_have_an_account_yet_sign_up">Don\'t have an account yet? Sign up</string>
	<string name="email_resetpass">You will be sent an email with instructions to reset your password.</string>
	<string name="already_sign_up_login">Already Sign up? Login</string>
	<string name="i_agree_to_vietincome_s_terms_of_use">I agree to Vietincome’s Terms of Use</string>
	<string name="invite_friend">Invite friends</string>
	<string name="become_vip">Become VIP</string>
	<string name="signal_vip_only">Signal (VIP only)</string>
	<string name="change_password">Change password</string>
	<string name="logout">Logout</string>
	<string name="intro_invite">Step 1: Copy Your Invite Code and send Your Friend\n\nStep 2: Instructions Your friends download the Vietincome App and enter Your Invite Code when Your Friends Sign Up\n\nStep 3: Your Friends enter Your Invite Code, You and Your Friends both get 50 VIC</string>
	<string name="active_now">Active now</string>
	<string name="note">\- Currently VIP member ONLY available for VIC purchase\n\n\- Benefit for VIP member: Early access All Signal for VIP and Support direct from Vietincome Team\n\n\- One month validity applies to 30 Calendar days.</string>
</resources>
